<resources>
    <string name="app_name">Archivist</string>
    <string name="action_settings">Settings</string>
    <string name="introduction_title">ARCHIVIST</string>
    <string name="introduction_description">Join Ivy and get podcasts hand-selected for you by advanced algorithms. Plus, download just about every podcast available and have the entire archive - all in one place.</string>
    <string name="library">Library</string>
    <string name="home">Home</string>
    <string name="introduction_subtitle">FOR YOU AND ONLY YOU</string>
    <string name="get_started">GET STARTED</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="subscribe">Subscribe</string>
    <string name="latest_episode">Latest Episode</string>
    <string name="description">Description</string>
    <string name="album_art_background_description">Album art</string>
    <string name="album_art">Album art</string>
    <string name="search">Search</string>
</resources>
